<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_tasks"
            android:textColor="@color/deadLine"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textColorHighlight="@color/highlight"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_edit_tasks"
        android:textColor="@color/deadLine"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/body"
        android:layout_width="421dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sleep_title"
            android:onClick="saveNote"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/sleep_title"
            android:onClick="deleteNote"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>