<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyTime">

    <TextView
        android:id="@+id/recommendation2"
        android:layout_width="277dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="216dp"
        android:text="@string/cycle_pomodoro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recommendation3"
        android:layout_width="391dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="600dp"
        android:text="@string/remainder_cycle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="82dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/title_study1"
        android:layout_width="177dp"
        android:layout_height="46dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="100dp"
        android:text="@string/study_time_title"
        android:textAlignment="center"
        android:textColor="@color/sleep_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_study"
        android:layout_width="239dp"
        android:layout_height="30dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="160dp"
        android:text="@string/pomodoro"
        android:textAlignment="center"
        android:textColor="@color/pomodoro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="237dp"
        android:layout_height="248dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="280dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pomodoro" />

    <Button
        android:id="@+id/textView"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="480dp"
        android:background="@color/ButtonColor"
        android:onClick="startStudy"
        android:text="@string/start_study"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numpickPomodoro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>