<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ans1"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="296dp"
        android:background="@color/ButtonColor"
        android:clickable="true"
        android:drawableTint="@color/black"
        android:text="@string/movement"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ans4"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="524dp"
        android:background="@color/ButtonColor"
        android:drawableTint="@color/black"
        android:duplicateParentState="false"
        android:text="@string/random"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ans2"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="372dp"
        android:background="@color/ButtonColor"
        android:drawableTint="@color/black"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textColor="#23294E"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarQuestion"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="406dp"
        android:layout_height="42dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="612dp"
        android:indeterminateTint="@color/pomodoro_green"
        android:max="100"
        android:progress="80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ans3"
        android:layout_width="350dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="448dp"
        android:background="@color/ButtonColor"
        android:drawableTint="@color/black"
        android:duplicateParentState="false"
        android:text="@string/random"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleQues"
        android:layout_width="800px"
        android:layout_height="300px"
        android:layout_marginStart="64dp"
        android:layout_marginTop="132dp"
        android:background="@android:color/transparent"
        android:singleLine="false"
        android:text="@string/ques_categories"
        android:textAlignment="center"
        android:textColor="@color/sleep_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="82dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/CANCELB"
        android:layout_width="126dp"
        android:layout_height="39dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/deadLine"
        android:duplicateParentState="false"
        android:onClick="CancelStudy"
        android:text="@string/cancel_study"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>