<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="82dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TimePicker
        android:id="@+id/timePicker"
        style="@android:style/Widget.Material.TimePicker"
        android:layout_width="224dp"
        android:layout_height="151dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="320dp"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_sleep"
        android:layout_width="250dp"
        android:layout_height="89dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="124dp"
        android:text="@string/title_sleep"
        android:textAlignment="center"
        android:textColor="@color/sleep_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recommendation"
        android:layout_width="277dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="240dp"
        android:text="@string/recommended_sleep"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="524dp"
        android:text="@string/bed_message"
        android:textAlignment="center"
        android:textColor="@color/sleep_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="83dp"
        android:layout_height="86dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="508dp"
        android:rotation="-17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bedtime_24"
        app:tint="@color/moon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="484dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/star_off"
        app:tint="@color/stars" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="56dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="464dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/star_off"
        app:tint="@color/stars" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="97dp"
        android:layout_height="56dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="368dp"
        android:background="@color/deadLine"
        android:onClick="onSetAlarm"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>